# chess

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: test.yml
csharp/: csharp.sln
csharp/LibChess/: Board.cs  Coord.cs  Engine.cs  LibChess.csproj  NativeFunctions.cs
csharp/LibChess.Native/: CMakeLists.txt
csharp/LibChess.Native/src/: libchess-native.h  native-board.cpp  native-engine.cpp  native-util.cpp
lib/: CMakeLists.txt  libchess.h  libchesspch.h
lib/libchess/: board.cpp  board.h  coord.h  engine.cpp  engine.h  util.cpp  util.h
src/: CMakeLists.txt  client.cpp  client.h  game_console.cpp  game_console.h  main.cpp  pch.h  renderer.cpp  renderer.h
src/renderer/: backends.h  unix_backend.cpp  windows_backend.cpp
tests/: CMakeLists.txt  fen_parsing.cpp  legal_moves.cpp  valid_moves.cpp
tests/testbed/: assertions.h  testbed.h  tests.cpp  tests.h
