cmake_minimum_required(VERSION 3.20)

file(GLOB_RECURSE LIBCHESS_SOURCE CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
add_library(libchess STATIC ${LIBCHESS_SOURCE})

if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
    list(APPEND COMPILER_DEFINITIONS LIBCHESS_PLATFORM_WINDOWS)
else()
    list(APPEND COMPILER_DEFINITIONS LIBCHESS_PLATFORM_UNIX)
    if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
        list(APPEND COMPILER_DEFINITIONS LIBCHESS_PLATFORM_OSX)
    elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
        list(APPEND COMPILER_DEFINITIONS LIBCHESS_PLATFORM_LINUX)
    endif()
endif()

target_include_directories(libchess PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_precompile_headers(libchess PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/libchesspch.h")
target_compile_definitions(libchess PUBLIC ${COMPILER_DEFINITIONS} $<$<CONFIG:Debug>:LIBCHESS_DEBUG>)
set_target_properties(libchess PROPERTIES
    CXX_STANDARD 17
    OUTPUT_NAME "chess"
    FOLDER "core")